# ParallelishProjectEuler

./: .gitignore  CMakeLists.txt
Testing/: basictest.cc
src/: CMakeLists.txt  fib.cc  fib.h  main.cc
src/MPI/: CMakeLists.txt  main.cc
src/OMP/: CMakeLists.txt  main.cc  projecteuler.cc  projecteuler.h
